--- a/views/masterdata.hbs
+++ b/views/masterdata.hbs
@@ -48,7 +48,7 @@
                                 aria-haspopup="true" aria-expanded="false">
                                 <span class="sr-only">Toggle Dropdown</span>
                             </button>
-                            <div class="dropdown-menu dropdown-menu-right"">
+                            <div class="dropdown-menu dropdown-menu-right">
                                     <a class=" dropdown-item" href="/users/masterdata">Booking database</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="/users/masterdata">Employee database</a>
@@ -60,14 +60,14 @@
                             <div class="row row-custom">
                                 <div class="col-5">
                                     <input type="text" class="form-control-plaintext control-inline my-inpyt-text"
-                                        placeholder="From">
+                                        placeholder="From" id="fromInput">
                                 </div>
                                 <div class="col-2" id="icon-trans">
                                     <i style="margin:auto 1px" class="fas fa-exchange-alt" aria-hidden="true"></i>
                                 </div>
                                 <div class="col-5">
                                     <input type="text" class="form-control-plaintext control-inline my-inpyt-text"
-                                        placeholder="To">
+                                        placeholder="To" id="toInput">
                                 </div>
                             </div>
                         </div>
@@ -177,3 +177,4 @@
 <script src="/dist/js/i18n/datepicker.en.js"></script>
 <script src="/js/a2.js"></script>
 <script src="/js/master-data.js"></script>
+<script src="/js/search.js"></script>
