--- a/views/partials/masterDataPartial.hbs
+++ b/views/partials/masterDataPartial.hbs
@@ -3,7 +3,7 @@
                 <div class="col-2 active-filter"><a class="action-sm" href="#">
                                 <i class="far fa-circle"></i>
                         </a> Departure <i class="fas fa-arrow-down"></i></div>
-                <div class="col-2">Arrival</div>
+                <div class="col-2">Minute moving</div>
                 <div class="col-2">Bus Route</div>
                 <div class="col-2">Bus ID</div>
                 <div class="col-2">Price</div>
@@ -16,11 +16,12 @@
                         <div class="col-2  active-filter"><a class="action" href="#">
                                         <i class="far fa-circle"></i>
                                 </a>
-                                {{date}}<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{departure}}</div>
-                        <div class="col-2">{{date}}<br>{{arrival}}</div>
-                        <div class="col-2">{{fromLocation}}-{{toLocation}}</div>
-                        <div class="col-2">{{busID}}</div>
-                        <div class="col-2">{{price}}</div>
+                                {{prettifyDate ngayGioKhoiHanh}}<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{getTime ngayGioKhoiHanh}}
+                        </div>
+                        <div class="col-2">{{Tuyen.soPhutDiChuyen}}</div>
+                        <div class="col-2">{{Tuyen.xuatphat.ten}}-{{Tuyen.ketthuc.ten}}</div>
+                        <div class="col-2">{{Xe.bienso}}</div>
+                        <div class="col-2">{{gia}}</div>
                         <div class="col-2">
                                 <a class="action" href="#">
                                         <i class="fas fa-eye"></i>
@@ -39,11 +40,7 @@
         </div>
 
 
-        <ul class="pagination d-flex justify-content-center mt-auto">
-                <li class="page-item"><a class="page-link" href="#">
-                                <</a> </li> <li class="page-item"><a class="page-link 1 active" href="#">1</a></li>
-                <li class="page-item"><a class="page-link 2" href="#">2</a></li>
-                <li class="page-item"><a class="page-link 3" href="#">3</a></li>
-                <li class="page-item"><a class="page-link" href="#">></a></li>
-        </ul>
+        <nav class="d-flex">
+                {{{paginateHelper pagination}}}
+        </nav>
 </div>
